@@ -120,8 +120,10 @@ ScopedPtr<csql::TableExpression> Scheduler::buildPipelineGroupByExpression(
     csql::Transaction* txn,
     csql::ExecutionContext* execution_context,
     RefPtr<csql::GroupByNode> node) {
-  size_t max_concurrent_tasks = 100; //FIXME
-  size_t max_concurrent_tasks_per_host = 4; //FIXME
+  size_t max_concurrent_tasks =
+      config_->getInt("server.max_concurrent_tasks").get();
+  size_t max_concurrent_tasks_per_host =
+      config_->getInt("server.max_concurrent_tasks_per_host").get();
 
   Vector<csql::ValueExpression> select_expressions;
   for (const auto& slnode : node->selectList()) {
